bug_data/output/nq_dev_0722_hypercl_3e-5_e5_offline_eval/nq_dev_0722_hypercl_3e-5_e5_10_of_16.log
Traceback (most recent call last):
  File "semanticdebugger/debug_algs/run_lifelong_finetune.py", line 6, in <module>
    from semanticdebugger.debug_algs.cl_simple_alg import ContinualFinetuning
  File "/private/home/yuchenlin/SemanticDebugger/semanticdebugger/debug_algs/cl_simple_alg.py", line 13, in <module>
    from semanticdebugger.debug_algs.commons import OnlineDebuggingMethod
  File "/private/home/yuchenlin/SemanticDebugger/semanticdebugger/debug_algs/commons.py", line 223
    self.logger.info("-"*50)
       ^
IndentationError: expected an indented block
